created petPost.js file in public folder, updated file to create front end post request console log new post with correct data returned

--- a/public/petPost.html
+++ b/public/petPost.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="col-md-5 offset-md-3">
-        <form class=" card petPost p-4" style="border-radius: 2em;">
+        <form class=" card petPost p-4" id="petForm"style="border-radius: 2em;">
           <div class="form-group">
             <div class="row mb-2">
               <div class="col">
@@ -55,6 +55,7 @@
                   <select class="custom-select" id="petType">
                     <option for="Dog" value="Dog">Dog</option>
                     <option for="Cat" value="Cat">Cat</option>
+                    <option for="Other" value="Other">Other</option>
                   </select>
                 </div>
               </div>
