--- a/public/members.html
+++ b/public/members.html
@@ -26,6 +26,15 @@
       </div>
     </div>
   </div>
+  <div class="col-md-2" id="newPost">
+    
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12 blog-container">
+  </div>
+</div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
