updated post table,newpost form, petPost.js and apiroutes.js

--- a/public/petPost.html
+++ b/public/petPost.html
@@ -34,10 +34,6 @@
             </div>
             <div class="row mb-2">
               <div class="col">
-                <label for="phone">Contact Number:</label>
-                <input type="text" class="form-control" id="phone" placeholder="(012)-345-6789">
-              </div>
-              <div class="col">
                 <label for="email">Contact Email:</label>
                 <input type="text" class="form-control" id="email" placeholder="someemail@host.com">
               </div>
@@ -52,16 +48,11 @@
               <div class="col">
                 <div class="form-group">
                   <label for="category">Select Category:</label>
-                  <select class="custom-select" id="petType">
-                    <option for="Dog" value="Dog">Dog</option>
-                    <option for="Cat" value="Cat">Cat</option>
-                    <option for="Other" value="Other">Other</option>
+                  <select class="custom-select" id="category">
+                    <option for="Lost Pet" value="Lost Pet">Lost Pet</option>
+                    <option for="Found Pet" value="Found Pet">Found Pet</option>
                   </select>
                 </div>
-              </div>
-              <div class="col">
-                <label for="reward">Reward:</label>
-                <input type="text" class="form-control" id="reward" placeholder="Optional">
               </div>
             </div>
             <button type="submit" class="btn btn-primary submit btn-lg">Create Post</button>
