--- a/public/petPost.html
+++ b/public/petPost.html
@@ -11,12 +11,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body id="page3">
   <div class="container">
     <div class="row">
       <div class="row">
         <div class="col-sm-2 mt-4">
-          <a class="btn btn-light" href="/members">Go to Memeber Home</a>
+          <a class="btn btn-light" href="./members.html">Go to Members Home</a>
         </div>
       </div>
       <div class="col-md-5 offset-md-3">
