--- a/public/members.html
+++ b/public/members.html
@@ -10,36 +10,42 @@
 </head>
 
 <body id="page2">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">
-          Logout
-        </a>
+  <div class="header">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/logout">Logout</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col">
+          <h2 class="text-center">Welcome <span class="member-name"></span></h2>
+        </div>
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
-      </div>
+  </div>
+  <div class="row justify-content-center mt-5">
+    <div class="col">
+      <h4 class="text-center">User Posts</h4>
+    </div>
+    <div class="col">
+      <h4 class="text-center">Community Posts</h4>
     </div>
   </div>
-  <div class="col-md-2" id="newPost">
-
-  </div>
-  </div>
-  <div class="row">
-    <div class="col-6 justify-content-center" id="userPost">
-    <div class="col-6 justify-content-center" id="globalPost">
+  <div class="row justify-content-center mt-5">
+    <div class="col" id="userPost">
+    </div>
+    <div class="col" id="globalPost">
     </div>
   </div>
-  </div>
+</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </body>
+
 </html>
