User post was added

--- a/public/members.html
+++ b/public/members.html
@@ -31,7 +31,9 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12 blog-container">
+  <div class="col-md-12" id="userPost">
+  </div>
+  <div class="col-md-12" id="globalPost">
   </div>
 </div>
 </div>
