--- a/public/members.html
+++ b/public/members.html
@@ -41,6 +41,17 @@
     </div>
   </div>
 </div>
+<div class="footer">
+  <div id="button"></div>
+<div id="container">
+<div id="cont">
+<div class="footer_center">
+     <h3>Company Info</h3>
+     <h5>LOST & HOLLA</h5>
+</div>
+</div>
+</div>
+</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
