--- a/public/petPost.html
+++ b/public/petPost.html
@@ -61,6 +61,16 @@
       </div>
     </div>
   </div>
+  <div class="footer">
+    <div id="button"></div>
+  <div id="container">
+  <div id="cont">
+  <div class="footer_center">
+       <h3>Classy footer text</h3>
+  </div>
+  </div>
+  </div>
+  </div>
   <!-- Custom Script -->
   <script src="js/petPost.js" type="text/javascript"></script>
 
