--- a/public/signup.html
+++ b/public/signup.html
@@ -40,6 +40,16 @@
       </div>
     </div>
   </div>
+  <div class="footer">
+    <div id="button"></div>
+  <div id="container">
+  <div id="cont">
+  <div class="footer_center">
+       <h3>Classy footer text</h3>
+  </div>
+  </div>
+  </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
