--- a/public/login.html
+++ b/public/login.html
@@ -50,7 +50,7 @@
 <div class="footer_center">
      <h3>LOST & HOLLA</h3>
      <p>Address: My House, North Texas</p>
-     <p>GitHub:<a href="https://github.com/skoob126/Pet-Finder"></a></p>
+     <a href="https://github.com/skoob126/Pet-Finder">GitHub:</a>
      
 </div>
 </div>
