--- a/public/members.html
+++ b/public/members.html
@@ -46,8 +46,10 @@
 <div id="container">
 <div id="cont">
 <div class="footer_center">
-     <h3>Company Info</h3>
-     <h5>LOST & HOLLA</h5>
+  <h3>LOST & HOLLA</h3>
+  <p>Address: My House, North Texas</p>
+  <a href="https://github.com/skoob126/Pet-Finder">GitHub:</a>
+     
 </div>
 </div>
 </div>
