--- a/public/signup.html
+++ b/public/signup.html
@@ -45,7 +45,9 @@
   <div id="container">
   <div id="cont">
   <div class="footer_center">
-       <h3>Classy footer text</h3>
+    <h3>LOST & HOLLA</h3>
+    <p>Address: My House, North Texas</p>
+    <a href="https://github.com/skoob126/Pet-Finder">GitHub:</a>
   </div>
   </div>
   </div>
