--- a/public/members.html
+++ b/public/members.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" style="height: 4em;">
         <div class="col">
           <h2 class="text-center">Welcome <span class="member-name"></span></h2>
         </div>
@@ -28,32 +28,38 @@
   </div>
   <div class="row justify-content-center mt-5">
     <div class="col">
-      <h4 class="text-center">User Posts</h4>
+      <h3 class="text-center">User Posts</h3>
     </div>
     <div class="col">
-      <h4 class="text-center">Community Posts</h4>
+      <div class="form-group text-center">
+        <select class="custom-select" id="category" style="width: 50%; height: 40px; font-size: 20px">
+          <option selected value="">All Posts</option>
+          <option value="Lost Pet">Lost Pets</option>
+          <option value="Found Pet">Found Pets</option>
+        </select>
+      </div>
     </div>
   </div>
-  <div class="row justify-content-center mt-5">
+  <div class="row justify-content-center mr-5 ml-5 mt-5">
     <div class="col" id="userPost">
     </div>
     <div class="col" id="globalPost">
     </div>
   </div>
-</div>
-<div class="footer">
-  <div id="button"></div>
-<div id="container">
-<div id="cont">
-<div class="footer_center">
-  <h3>LOST & HOLLA</h3>
-  <p>Address: My House, North Texas</p>
-  <a href="https://github.com/skoob126/Pet-Finder">GitHub:</a>
-     
-</div>
-</div>
-</div>
-</div>
+  </div>
+  <div class="footer">
+    <div id="button"></div>
+    <div id="container">
+      <div id="cont">
+        <div class="footer_center">
+          <h3>LOST & HOLLA</h3>
+          <p>Address: My House, North Texas</p>
+          <a href="https://github.com/skoob126/Pet-Finder">GitHub:</a>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
