--- a/public/members.html
+++ b/public/members.html
@@ -38,6 +38,11 @@
           <option value="Found Pet">Found Pets</option>
         </select>
       </div>
+      <div class="form-group text-center">
+        <select class="custom-select" id="locations" style="width: 50%; height: 40px; font-size: 20px">
+          <option selected value="">All Locations</option>
+        </select>
+      </div>
     </div>
   </div>
   <div class="row justify-content-center mr-5 ml-5 mt-5">
