Added pictures to post

--- a/public/petPost.html
+++ b/public/petPost.html
@@ -46,6 +46,12 @@
             </div>
             <div class="row mb-2">
               <div class="col">
+                <label for="image">Upload Image:</label>
+                <input type="text" class="form-control" id="image" placeholder="Input image URL">
+              </div>
+            </div>
+            <div class="row mb-2">
+              <div class="col">
                 <div class="form-group">
                   <label for="category">Select Category:</label>
                   <select class="custom-select" id="category">
