--- a/public/signup.html
+++ b/public/signup.html
@@ -13,6 +13,9 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
+        <a href="index.html"><img class="img-responsive2"       
+          src="https://files.slack.com/files-pri/T0112QA4E5P-F014LD9059D/23ca0511-ceba-40fc-8ce9-f36860cfac99_200x200.png" 
+          style="height: 80px; width: 80px;"></a>
       </div>
     </div>
   </nav>
