--- a/public/petPost.html
+++ b/public/petPost.html
@@ -17,6 +17,9 @@
       <div class="row">
         <div class="col-sm-2 mt-4">
           <a class="btn btn-light" href="./members.html">Go to Members Home</a>
+          <a href="index.html"><img class="img-responsive2"       
+            src="https://files.slack.com/files-pri/T0112QA4E5P-F014LD9059D/23ca0511-ceba-40fc-8ce9-f36860cfac99_200x200.png" 
+            style="height: 80px; width: 80px;"></a>
         </div>
       </div>
       <div class="col-md-5 offset-md-3">
