--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a href="index.html"><img class="img-responsive2"       
-          src="https://files.slack.com/files-pri/T0112QA4E5P-F014LD9059D/23ca0511-ceba-40fc-8ce9-f36860cfac99_200x200.png" 
+          src="./assets/lost-and-holla.png" 
           style="height: 80px; width: 80px;"></a>
       </div>
     </div>
